# dhti-elixir-base

./: 404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  t_install.py  tox.ini
.github/workflows/: github-dependents-info.yml  pytest.yml  tox.yml
contributing/: index.html
dhti_elixir_base/: __init__.py  agent.py  chain.py  graph.py  llm.py  model.py  mydi.py  server.py  space.py
docs/: conf.py  index.md  modules.md
examples/: graph.md
github-dependents-info/: index.html
modules/: index.html
notes/: vllm-images.md
search/: search_index.json
src/dhti_elixir_base/: __init__.py  agent.py  chain.py  chatllm.py  embedding.py  graph.py  llm.py  mcp.py  parlant_agent.py  server.py
src/dhti_elixir_base/cds_hook/: card.py  generate_cards.py  request.py  request_parser.py  routes.py
src/dhti_elixir_base/fhir/: __init__.py  fhir_search.py  smart_on_fhir.py
src/dhti_elixir_base/model/: __init__.py  cds_hook_card.py  cds_hook_service.py
src/dhti_elixir_base/rag/: process.py  process_file.py
src/dhti_elixir_base/utils/: file_process.py  image_prompt.py
tests/: bootstrap.py  test_agent.py  test_chain.py  test_embedding.py  test_graph.py  test_llm.py  test_model.py  test_server.py  test_space.py
tests/cds_hook/: test_card.py  test_request_parser.py  test_service.py
tests/fhir/: test_fhir_search.py
tests/model/: test_cds_hook_card.py  test_cds_hook_request.py  test_cds_hook_service.py
tests/rag/: test_process.py
tests/utils/: test_file_process.py  test_image_prompt.py
