[tool.poetry]
name = "dhti-elixir-base"
version = "0.0.3"
description = "Base classes for DHTI Elixir"
authors = ["Bell Eapen <github.com/dermatologist>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
langchain-core = ">=0.1.5"
kink = "^0.8.0"
pytest = "^8.2.1"
python-dotenv = "^1.0.1"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
recommonmark = { version = "0.7.1", optional = true }
httpx = "^0.27.0"
langgraph = "^0.1.19"
agency = "^1.6.3"
overrides = "^7.7.0"
langchain-community = "^0.2.6"
fhiry = "^4.0.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.4"
fastapi = "^0.104.0"
sse-starlette = "^1.6.5"

[tool.langserve]
export_module = "dhti_elixir_base"
export_attr = "chain"


[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "recommonmark"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
